--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "name": "el-treedynamictab",
+  "author": "mrzhouxl",
   "version": "0.1.0",
+  "keywords": [
+    "vue",
+    "component",
+    "tree",
+    "table",
+    "slot",
+    "Dynamic"
+  ],
+  "main": "dist/vue-clock.min.js",
+  "license": "MIT",
+  "homepage": "https://bestvist.github.io/vue-clock2/",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,15 +20,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-plugin-component": "^1.1.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "element-ui": "^2.14.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
   },
