--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name el-treedynamictab --dest lib components/index.js"
   },
   "dependencies": {
     "babel-plugin-component": "^1.1.1",
